# inspiration-triggered-search

./: CMakeLists.txt  README.md  build.sh
experiments/GECCO2016/: ITS.py  NS.py  US.py
experiments/complexityML/: createDataSet.py  testOnUnlabelledDataSet.py  train.py
experiments/complexityML/chosen/: ANN_hiddenNodes=10  dataScaler
experiments/examples_ITS/: its_multipleFeatures.py  its_oneFeature.py
experiments/examples_complexityTestByOptimization/: showImagesInDatabases.py  test_basicFeatures.py  test_its.py  test_oneFeature.py
experiments/examples_uninspiredSearch/: NV+RS.py  multipleFeatures_doublePenalty.py  oneFeature.py
libs/: CMakeLists.txt
libs/MultiNEAT/lib/: Genome.cpp  Genome.h  NeuralNetwork.cpp  NeuralNetwork.h  Population.cpp  Population.h  PythonBindings.h  Random.cpp  Random.h  Species.cpp  Substrate.cpp
libs/pyboostcvconverter/: CVBoostConverter.hpp
scripts/: ITS.py  MultiNEAT.py
src/: core.hpp  features.hpp  its.hpp  main.cpp  pythonBindings.hpp  utilities.hpp
